fix chapter adding service